Bug 174943 - playback stops after last.fm settings were opened
Summary: playback stops after last.fm settings were opened
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Internet Services (show other bugs)
Version: 2.0-SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-12 12:57 UTC by simon
Modified: 2009-12-09 11:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2008-11-12 12:57:08 UTC
Version:           2.0-SVN (using 4.1.72 (KDE 4.1.72 (KDE 4.2 >= 20081104)), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.26-tuxonice

current svn stops playback after closing the configure dialog when the last.fm settings were opened.

clickthrough:
open settings-> lastfm settings -> close -> close -> amarok stops playback
Comment 1 Lydia Pintscher 2008-11-12 13:01:07 UTC
Confirming for Nikolaj
Comment 2 Leo Franchi 2008-11-14 16:40:22 UTC
SVN commit 884298 by lfranchi:

don't stop playback on unload of last.fm service. no longer using libUnicorn, don't think we need this anymore. i can't get it to crash, tell if it you get crashes in the last.fm service on quit or unload.

BUG: 174943

 M  +0 -2      LastFmService.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=884298