don't stop playback on unload of last.fm service. no longer using libUnicorn, don't think we need this anymore. i can't get it to crash, tell if it you get crashes in the last.fm service on quit or unload.

BUG: 174943

svn path=/trunk/extragear/multimedia/amarok/; revision=884298